# rbshell

./: 404.html  Cargo.toml  README.adoc  README.dj  README.md  building-and-testing.html  config.html  index.html  options.html  print.html  searchindex.js  searchindex.json
.github/workflows/: build_debug.yml  build_website.yml
docs/: book.toml  config.dj  index.dj  options.dj  template.html
docs/src/: SUMMARY.md  building-and-testing.md  index.md
res/: rbshell.json
src/: component.rs  component_theme.rs  components.rs  config.rs  desktop_entry.rs  main.rs  panel.rs  start_menu.rs
src/app_tray/: cosmic_comp.rs  desktop_entry.rs  mod.rs
src/app_tray/compositor/: cosmic.rs  cosmic_comp.rs  kde.rs  mod.rs  wlr.rs
src/components/: mod.rs
src/compositor/: cosmic_comp.rs  mod.rs
src/design/: component_theme.rs  components.rs  mod.rs
src/freedesktop/: desktop_entry.rs  icons.rs
src/settings_tray/: clock.rs  clock_subscription.rs  mod.rs  status_icons.rs
src/start_menu/: mod.rs
