[package]
name = "ryanabx-shell"
authors = [ "Ryan Brue <ryanbrue@gmail.com>" ]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Layer shell panel for wayland desktops"
repository = "https://github.com/ryanabx/ryanabx-shell"

[dependencies]
freedesktop-desktop-entry = "0.7.0"
freedesktop-icons = "0.2.6"
iced = { git = "https://github.com/ryanabx/iced", branch = "attempt-4-163", features = [ "wayland", "tiny-skia", "image" ] }
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "c8d3a1c" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "c8d3a1c" }
once_cell = "1.19.0"
