[package]
name = "rbshell"
authors = [ "Ryan Brue <ryanbrue@gmail.com>" ]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Layer shell panel for wayland desktops"
repository = "https://github.com/ryanabx/rbshell"
readme = "README.md"

[dependencies]
freedesktop-desktop-entry = "0.6.2"
freedesktop-icons = "0.2.6"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = [ "tiny-skia", "image", "svg", "fira-sans" ] }
# iced = { git = "https://github.com/ryanabx-contrib/iced", branch = "iced-rbshell", features = [ "wayland", "tiny-skia", "image", "svg", "fira-sans", "auto-detect-theme" ] }
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "c8d3a1c" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "c8d3a1c" }
once_cell = "1.19.0"
chrono = "0.4.38"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
wayland-client = "0.31.5"
wayland-protocols-wlr = { version = "0.3.3", features = ["client"] }
smithay-client-toolkit = "0.19.2"
wayland-protocols-plasma = { version = "0.3.3", features = ["client"] }
